<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="story_image">Foto Story</string>
    <string name="story_description">Deskripsi Story</string>
    <string name="user_name">Nama User</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="no_image_selected">Tidak ada gambar yang dipilih</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="upload_success">Story berhasil diunggah</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="description">Deskripsi</string>
    <string name="language_settings">Pengaturan Bahasa</string>
    <string name="appwidget_text" translatable="false">STORY APP</string>
    <string name="empty_text">TIDAK ADA DATA</string>
    <string name="upload_story">Unggah Cerita</string>
    <string name="empty_description_warning">Harap masukkan deskripsi gambar terlebih dahulu</string>
    <string name="upload_failed">Story gagal diunggah, periksa koneksi internet Anda</string>
    <string name="password_lest_than_8_characters">Password tidak boleh kurang dari 8 karakter</string>
    <string name="title_activity_maps" translatable="false">Story Maps</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="retry">Coba lagi</string>
    <string name="normal_type" translatable="false">Normal</string>
    <string name="satellite_type" translatable="false">Satellite</string>
    <string name="terrain_type" translatable="false">Terrain</string>
    <string name="hybrid_type" translatable="false">Hybrid</string>
    <string name="use_current_location">Gunakan lokasi saat ini</string>
</resources>